Konga/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: kong
  labels:
    app: konga
spec:
  selector:
    matchLabels:
      app: konga
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: web
        image: pantsel/konga
        resources: {}
        ports:
        - containerPort: 1338
          name: web
